--- a/style.css
+++ b/style.css
@@ -8,3 +8,16 @@
     top: 0;
     z-index:9999;
 }
+.movie_head{
+    font-size: 20px;
+    padding: 6px 22px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+.movie_head i{
+    float: right;
+}
+
+.achievement_text span{
+    color:orange;
+}
